top stories header fix on firefox

--- a/assets/styles/partials/_top-stories.scss
+++ b/assets/styles/partials/_top-stories.scss
@@ -118,11 +118,11 @@
             > h2{
                 font-weight: bold;
                 font-size: em(22);
-                height:48px;
+                height:50px;
 
                 @media screen and (max-width: $md-break){
                    font-size: em(16);
-                   height:34px;
+                   height:36px;
                 }
 
                 @media screen and (max-width: $sm-break){
