--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8912,11 +8912,11 @@ button.swiper-pagination-bullet {
     .top-stories a.card > article > .content > h2 {
       font-weight: bold;
       font-size: 2.2em;
-      height: 48px; }
+      height: 50px; }
       @media screen and (max-width: 1200px) {
         .top-stories a.card > article > .content > h2 {
           font-size: 1.6em;
-          height: 34px; } }
+          height: 36px; } }
       @media screen and (max-width: 768px) {
         .top-stories a.card > article > .content > h2 {
           margin: 2px; } }
